--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
       <div class="main-content">
         <!--about user-->
         <div class="about">
-          <h1 class="about-name">FEDCHENKO VLADYSLAV</h1>
-          <h2 class="about-position">FULL-STACK DEVELOPER</h2>
+          <h1 class="about-name">ФЕДЧЕНКО ВЛАДИСЛАВ</h1>
+          <h2 class="about-position">FULL-STACK РОЗРОБНИК</h2>
 
           <p class="about-description">
-            I'm a front-end developer with a background in software engineering.
-            I am looking for a job where I can maximize my potential as a
-            professional. My candidacy would be useful because I have advanced
-            knowledge of such technologies as HTML, CSS, JavaScript, React, and
-            Node.js. In addition, my work experience is 6 months as a front-end
-            developer for the Comfy team. What sets me apart from other
-            candidates is my ability to learn quickly and take responsibility
-            for my tasks. I am a hardworking person with high goals.
+            Я фронтенд-розробник з досвідом роботи. Шукаю роботу, де зможу
+            максимально реалізувати свій потенціал як професіонал. Моя
+            кандидатура буде корисною, оскільки я володію поглибленими знаннями
+            таких технологій, як HTML, CSS, JavaScript, React та Node.js. Мій
+            досвід роботи становить 6 місяців в якості верстальника лендінгів в
+            команді Comfy. Що відрізняє мене від інших кандидатів, так це моя
+            здатність швидко навчатися та брати на себе відповідальність за свої
+            завдання. Я працьовита людина з високими цілями.
           </p>
         </div>
         <!--Projects-->
         <div class="projects">
-          <h3 class="title">PROJECTS</h3>
+          <h3 class="title">ПРОЄКТИ</h3>
 
-          <p class="subtitle">Team projects</p>
+          <p class="subtitle">Командні проєкти</p>
 
           <ol class="projects-list">
             <li class="projects-item">
@@ -60,13 +60,14 @@
               </span>
 
               <p class="project-technologies">
-                Technologies: HTML5, CSS3, JavaScript
+                Технології: HTML5, CSS3, JavaScript
               </p>
 
               <p class="projects-list-item-text">
-                Js team project. A site for finding movies with the ability add
-                to personal library. Role: developer. Did library functionality,
-                namely displaying movies in watched and stood in line.
+                Командний проект на JS. Сайт для пошуку фільмів з можливістю
+                додавання в особисту бібліотеку. Роль: розробник. Робив
+                функціонал бібліотеки, а саме відображення фільмів у
+                переглянутих та в черзі.
               </p>
             </li>
             <li class="projects-item">
@@ -87,18 +88,18 @@
               </span>
 
               <p class="project-technologies">
-                Technologies: HTML5, CSS3, JavaScript
+                Технології: HTML5, CSS3, JavaScript
               </p>
 
               <p class="projects-list-item-text">
-                Team project. Website for selling ice cream. Role: Developer.
-                Developed the Contacts section and its adaptability under phone,
-                tablet and desktop.
+                Командний проєкт. Сайт для продажу морозива. Роль: Розробник.
+                Розробив розділ "Контакти" та його адаптивність під телефон,
+                планшет і десктоп.
               </p>
             </li>
           </ol>
 
-          <p class="subtitle">Pet projects</p>
+          <p class="subtitle">Пет-проєкти</p>
           <ol class="projects-list">
             <li class="projects-item">
               <span class="project">
@@ -116,12 +117,12 @@
               </span>
 
               <p class="project-technologies">
-                Technologies: HTML5, CSS3, JS, Next.js
+                Технології: HTML5, CSS3, JS, Next.js
               </p>
 
               <p class="projects-list-item-text">
-                Pet project landing page written in Next.js. A simple and
-                interactive site for an architectural bureau. Role: developer.
+                Лендінг на Next.js. Простий, інтерактивний та адаптивний сайт
+                для архітектурного бюро. Роль: розробник.
               </p>
             </li>
             <li class="projects-item">
@@ -139,16 +140,16 @@
                 >
               </span>
 
-              <p class="project-technologies">Technologies: HTML5, CSS3, JS</p>
+              <p class="project-technologies">Технології: HTML5, CSS3, JS</p>
 
               <p class="projects-list-item-text">
-                Simple and inactive landing page. Adaptive layout for different
-                screens. Role: developer.
+                Простий та інтерактивний лендінг. Адаптивна верстка для різних
+                екранів. Роль: розробник.
               </p>
             </li>
           </ol>
 
-          <p class="subtitle">Educational projects</p>
+          <p class="subtitle">Навчальні проєкти</p>
           <ol class="projects-list">
             <li class="projects-item">
               <span class="project">
@@ -163,13 +164,11 @@
                 >
               </span>
 
-              <p class="project-technologies">
-                Technologies: Node.js,JavaScript
-              </p>
+              <p class="project-technologies">Технології: Node.js,JavaScript</p>
 
               <p class="projects-list-item-text">
-                Educational project. Creating a Back-end for the contact book.
-                Working with the MongoDB database. Role: developer.
+                Створення Back-end для контактної книги. Робота з базою даних
+                MongoDB. Роль: розробник.
               </p>
             </li>
             <li class="projects-item">
@@ -189,31 +188,31 @@
                 >
               </span>
 
-              <p class="project-technologies">Technologies: HTML5, CSS3</p>
+              <p class="project-technologies">Технології: HTML5, CSS3</p>
 
               <p class="projects-list-item-text">
-                Educational markup project. A simple and interactive web studio
-                site. Role: developer.
+                Навчалний проєкт по верстці. Простий та інтерактивний сайт
+                веб-студії сайт. Роль: розробник.
               </p>
             </li>
           </ol>
         </div>
         <!--Work-->
         <div class="work">
-          <h3 class="title">WORK EXPERIENCE</h3>
+          <h3 class="title">ДОСВІД РОБОТИ</h3>
           <!--Company 1-->
           <div>
             <h4 class="work-position">
               Trainee front-end <span class="line">|</span
               ><span class="organization">Comfy</span>
             </h4>
-            <p class="period">July 2023 - November 2023</p>
+            <p class="period">Липень 2023 - листопад 2023</p>
             <ul class="work-list">
-              <li class="work-list-item">Created 150+ lendings page.</li>
-
               <li class="work-list-item">
-                Added advertising landing pages to the CMS.
+                Створено 150+ адаптивних та інтерактивних лендінгів.
               </li>
+
+              <li class="work-list-item">Додавання в CMS рекламні лендінги.</li>
             </ul>
           </div>
           <!--Company 2-->
