--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
           <p class="about-description">
             Я фронтенд-розробник з досвідом роботи. Шукаю роботу, де зможу
-            максимально реалізувати свій потенціал як професіонал. Моя
-            кандидатура буде корисною, оскільки я володію поглибленими знаннями
-            таких технологій, як HTML, CSS, JavaScript, React та Node.js. Мій
-            досвід роботи становить 6 місяців в якості верстальника лендінгів в
-            команді Comfy. Що відрізняє мене від інших кандидатів, так це моя
-            здатність швидко навчатися та брати на себе відповідальність за свої
-            завдання. Я працьовита людина з високими цілями.
+            максимально реалізувати свій потенціал. Моя кандидатура буде
+            корисною, оскільки я володію знаннями таких технологій, як HTML,
+            CSS, JavaScript, React та Node.js. Мій досвід роботи становить 6
+            місяців в якості верстальника лендінгів в команді Comfy. Що
+            відрізняє мене від інших кандидатів, так це моя здатність швидко
+            навчатися та брати на себе відповідальність за свої завдання. Я
+            працьовита людина з високими цілями.
           </p>
         </div>
         <!--Projects-->
@@ -218,32 +218,32 @@
           <!--Company 2-->
           <div>
             <h4 class="work-position">
-              Designer <span class="line">|</span>
+              Дизайнер
+
+              <span class="line">|</span>
               <span class="organization">Zero architect</span>
             </h4>
-            <p class="period">January 2021 - October 2021</p>
+            <p class="period">Січень 2021 - жовтень 2021</p>
             <ul class="work-list">
               <li class="work-list-item">
-                Сreation of working documentation of the project.
+                Створення робочої документації проєктів.
               </li>
-              <li class="work-list-item">
-                Сreating a visualization of the project.
-              </li>
+              <li class="work-list-item">Створення візуалізації проєктів.</li>
             </ul>
           </div>
         </div>
         <!--Education-->
         <div class="education">
-          <h3 class="title">EDUCATION</h3>
+          <h3 class="title">ОСВІТА</h3>
           <h4 class="name-university">GOIT</h4>
           <h4 class="university-speciality">FULL STACK course online</h4>
-          <p class="period">April 2022 - March 2023</p>
+          <p class="period">Квітень 2022 - березень 2023</p>
           <h4 class="name-university">
-            Prydniprovska state academy of civil <br />
-            engineering and architecture
+            Придніпровська державна академія <br />
+            будівництва та архітектури
           </h4>
-          <h4 class="university-speciality">Architecture and urban planning</h4>
-          <p class="period">September 2018 - July 2022</p>
+          <h4 class="university-speciality">Архітектура та містобудування</h4>
+          <p class="period">Вересень 2018 - липень 2022</p>
         </div>
       </div>
       <!--Sidebar-->
@@ -251,10 +251,13 @@
         <img src="img/Влад.jpg" alt="user photo" class="photo" />
         <!--Contacts-->
         <div class="contacts">
-          <h3 class="sidebar-title">CONTACT INFORMATION</h3>
+          <h3 class="sidebar-title">
+            КОНТАКТНА <br />
+            ІНФОРМАЦІЯ
+          </h3>
           <div>
             <p class="contact-text-country">
-              <span class="contact-link-country">Ukraine, Dnipro</span>
+              <span class="contact-link-country"> Україна, Дніпро </span>
             </p>
             <p class="contact-text">
               <a href="tel:+38(067)162-32-73" class="contact-link"
@@ -323,32 +326,32 @@
           <h3 class="sidebar-title">SOFT SKILLS</h3>
           <ul class="soft-skills-list">
             <li class="soft-skills-item">
-              <span class="soft-skills-text">Teamwork</span>
+              <span class="soft-skills-text"> Працюю в команді</span>
             </li>
             <li class="soft-skills-item">
-              <span class="soft-skills-text">Attentive</span>
+              <span class="soft-skills-text">Уважний</span>
             </li>
             <li class="soft-skills-item">
-              <span class="soft-skills-text">Punctual</span>
+              <span class="soft-skills-text"> Пунктуальний</span>
             </li>
             <li class="soft-skills-item">
-              <span class="soft-skills-text">Creativity</span>
+              <span class="soft-skills-text">Креативний</span>
             </li>
             <li class="soft-skills-item">
-              <span class="soft-skills-text">Stress management</span>
+              <span class="soft-skills-text">Стресостійкий</span>
             </li>
           </ul>
         </div>
 
         <!--Language skills-->
         <div class="language-skills">
-          <h3 class="sidebar-title">LANGUAGE SKILLS</h3>
+          <h3 class="sidebar-title">ЗНАННЯ МОВИ</h3>
           <ul class="soft-skills-list">
             <li class="soft-skills-item">
-              <span class="soft-skills-text">Ukrainian : Native</span>
+              <span class="soft-skills-text"> Українська : Рідна </span>
             </li>
             <li class="soft-skills-item">
-              <span class="soft-skills-text">English : A2</span>
+              <span class="soft-skills-text">Англійська : A2</span>
             </li>
           </ul>
         </div>
