--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               Trainee front-end <span class="line">|</span
               ><span class="organization">Comfy</span>
             </h4>
-            <p class="period">Липень 2023 - листопад 2023</p>
+            <p class="period">Липень 2023 - грудень 2023</p>
             <ul class="work-list">
               <li class="work-list-item">
                 Створено 150+ адаптивних та інтерактивних лендінгів.
