--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             Я фронтенд-розробник з досвідом роботи. Шукаю роботу, де зможу
             максимально реалізувати свій потенціал. Моя кандидатура буде
             корисною, оскільки я володію знаннями таких технологій, як HTML,
-            CSS, JavaScript, React та Node.js. Мій досвід роботи становить 6
-            місяців в якості верстальника лендінгів в команді Comfy. Що
-            відрізняє мене від інших кандидатів, так це моя здатність швидко
-            навчатися та брати на себе відповідальність за свої завдання. Я
-            працьовита людина з високими цілями.
+            CSS, JavaScript, React та Node.js. Мій досвід роботи становить 3
+            місяці в якості верстальника лендінгів в команді Comfy. Що відрізняє
+            мене від інших кандидатів, так це моя здатність швидко навчатися та
+            брати на себе відповідальність за свої завдання. Я працьовита людина
+            з високими цілями.
           </p>
         </div>
         <!--Projects-->
@@ -206,10 +206,10 @@
               Trainee front-end <span class="line">|</span
               ><span class="organization">Comfy</span>
             </h4>
-            <p class="period">Липень 2023 - грудень 2023</p>
+            <p class="period">Cерпень 2023 - листопад 2023</p>
             <ul class="work-list">
               <li class="work-list-item">
-                Створено 150+ адаптивних та інтерактивних лендінгів.
+                Створено 100+ адаптивних та інтерактивних лендінгів.
               </li>
 
               <li class="work-list-item">Додавання в CMS рекламні лендінги.</li>
@@ -267,7 +267,7 @@
 
             <p class="contact-text">
               <a href="mailto:vfedcenko33@gmail.com" class="contact-link"
-                >vfedcenko33@gmail.com</a
+                >vladfedcenko33@gmail.com</a
               >
             </p>
             <p class="contact-text">
