--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <!--Company 1-->
           <div>
             <h4 class="work-position">
-              Trainee front-end <span class="line">|</span
+              HTML верстальник <span class="line">|</span
               ><span class="organization">Comfy</span>
             </h4>
             <p class="period">Cерпень 2023 - листопад 2023</p>
