--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h2 class="about-position">FULL-STACK РОЗРОБНИК</h2>
 
           <p class="about-description">
-            Я фронтенд-розробник з досвідом роботи. Шукаю роботу, де зможу
+            Я починаючий фронтенд-розробник з досвідом роботи. Шукаю роботу, де зможу
             максимально реалізувати свій потенціал. Моя кандидатура буде
             корисною, оскільки я володію знаннями таких технологій, як HTML,
             CSS, JavaScript, React та Node.js. Мій досвід роботи становить 3
