--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
           <h2 class="about-position">FULL-STACK РОЗРОБНИК</h2>
 
           <p class="about-description">
-            Я починаючий фронтенд-розробник з досвідом роботи. Шукаю роботу, де зможу
+            Я фронтенд-розробник з досвідом роботи. Шукаю роботу, де зможу
             максимально реалізувати свій потенціал. Моя кандидатура буде
             корисною, оскільки я володію знаннями таких технологій, як HTML,
-            CSS, JavaScript, React та Node.js. Мій досвід роботи становить 3
-            місяці в якості верстальника лендінгів в команді Comfy. Що відрізняє
+            CSS, JavaScript, React та Node.js. Мій досвід роботи становить 6
+            місяців в якості верстальника лендінгів в команді Comfy. Що відрізняє
             мене від інших кандидатів, так це моя здатність швидко навчатися та
             брати на себе відповідальність за свої завдання. Я працьовита людина
             з високими цілями.
@@ -203,13 +203,13 @@
           <!--Company 1-->
           <div>
             <h4 class="work-position">
-              HTML верстальник <span class="line">|</span
+              Trainee front-end розробник <span class="line">|</span
               ><span class="organization">Comfy</span>
             </h4>
-            <p class="period">Cерпень 2023 - листопад 2023</p>
+            <p class="period">Липень 2023 - Грудень 2023</p>
             <ul class="work-list">
               <li class="work-list-item">
-                Створено 100+ адаптивних та інтерактивних лендінгів.
+                Створено 150+ адаптивних та інтерактивних лендінгів.
               </li>
 
               <li class="work-list-item">Додавання в CMS рекламні лендінги.</li>
